--- a/package.json
+++ b/package.json
@@ -12,9 +12,9 @@
   },
   "dependencies": {
     "@thirdweb-dev/chains": "^0",
-    "@thirdweb-dev/react": "^3",
-    "@thirdweb-dev/sdk": "^3.10.53",
-    "ethers": "^5.7.2",
+    "@thirdweb-dev/react": "^3.14.35",
+    "@thirdweb-dev/sdk": "^3.10.54",
+    "ethers": "5",
     "next": "^13",
     "nextjs-progressbar": "^0.0.16",
     "react": "^18.2",
