--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@thirdweb-dev/react": "^3.14.40",
     "@thirdweb-dev/sdk": "^3.10.59",
     "ethers": "5",
+    "framer-motion": "^10.16.4",
     "next": "^13.4.19",
     "nextjs-progressbar": "^0.0.16",
     "react": "^18.2.0",
